OSDA-394-395-396: updated controler, Dao, and facade for the request (#148)
* OSDA-394-395-396: updated controler, Dao, and facade for the request

* OSDA-394-395-396: Fix fxml version and added missing comments

* OSDA-394-395-396: modified cards so when commentArea is blank it will not be recorded

* OSDA-394-395-396: used approvedRequstConfirmation and deniedRequestConfirmation

* OSDA-394-395-396: Remove Placeholder data on the fxml

* OSDA-394-395-396: fix accidental removal

* OSDA-394-395-396: Modified requestCardController to show error if the comment area is empty and the request is denied

* OSDA-394-395-396: Modified RequestCardController for error label to show before the confirmation.